Revert "IE11: Fix nav flyouts being covered by #main"
This reverts commit 1778ec673b2afb2023f504443a64beb89b6735ab.

--- a/public/css/icinga/layout-structure.less
+++ b/public/css/icinga/layout-structure.less
@@ -14,8 +14,6 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
-  // Prevent nav-level-2 flyovers from being covered by #main
-  z-index: 0;
 }
 
 #content-wrapper {
